# web-research-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  QUICK_REFERENCE.md  README.md  RELEASE.md  SEARXNG_SETUP.md  SECURITY.md  coverage.xml  docker-compose.yml  docker-start.sh  pyproject.toml  pytest.ini  requirements.txt
.bdd/: conftest.py  pytest.ini  test_api_docs.py  test_comparison.py  test_crawling.py  test_errors.py  test_github.py  test_monitoring.py  test_packages.py  test_search.py
.bdd/steps/: api_docs_steps.py  comparison_steps.py  crawling_steps.py  errors_steps.py  github_steps.py  monitoring_steps.py  packages_steps.py  search_steps.py
.bdd/support/: fixtures.py
docs/: API_DOCS_DESIGN.md  API_DOCS_IMPLEMENTATION.md  API_EXPLORER_DESIGN.md  CHANGELOG_MONITOR_DESIGN.md  CURRENT_SESSION_COMPLETE.md  CURRENT_SESSION_SUMMARY.md  ERROR_TRANSLATOR_DESIGN.md  ERROR_TRANSLATOR_IMPROVEMENTS.md  FINAL_SESSION_SUMMARY.md  IMAGE_SEARCH_GUIDE.md  IMPLEMENTATION_COMPLETE.md  NEW_FEATURE_SUMMARY.md  PROJECT_STATUS.md  QA_IMPROVEMENTS_SUMMARY.md  QA_RESPONSE.md  QUICK_START_EXAMPLES.md  README.md  REASONING_FIELD_VERIFICATION.md  REASONING_REQUIRED_CHANGE.md  SEARXNG_CONFIG_VERIFIED.md  SEARXNG_OPTIMAL_CONFIG.md  SERVICE_HEALTH_DESIGN.md  SESSION_2025-11-16.md  SESSION_CHANGES.md  SESSION_SUMMARY.md  STRUCTURED_DATA_EXTRACTION_DESIGN.md  TECH_COMPARISON_DESIGN.md  tool-ideas-ranked.md  web-activities-analysis.md
searxng-config/: settings.yml
tests/: __init__.py
(+45 files in other folders)
