[project]
name = "searxng-mcp"
version = "0.1.0"
description = "MCP server exposing local SearXNG search and crawl4ai fetching."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27,<0.29",
    "crawl4ai>=0.4.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
searxng-mcp = "searxng_mcp.server:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
